# rock-paper-scissor

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
api/: index.html
diagrams/: classes.drawio  index.html  sequence.drawio
docs/: api.md  diagrams.md  index.md
docs/diagrams/: classes.drawio  sequence.drawio
search/: search_index.json
src/rps_games/: game.py  players.py
src/rps_games/configs/: config.py  game_config.yaml  rules.yaml
tests/: test_game.py  test_players.py
