[tool.poetry]
name = "rps_games"
version = "0.0.1"
description = "Rock, Paper, Scissors game"
authors = ["Massimiliano Botticelli <massimiliano.botticelli@gmail.com>"]
license = "LICENCE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
emoji = "^2.14.1"

[tool.poetry.group.dev.dependencies]
isort = "^6.0.1"
black = "^25.1.0"
pylint = "^3.3.4"
icecream = "^2.1.4"
pytest = "^8.3.5"
pytest-mock = "^3.14.0"
mkdocs-material = "^9.6.7"
mkdocstrings = {extras = ["python"], version = "^0.28.2"}
